@@ -1,0 +1,36 @@
+<?xml version="1.0"?>
+<testlist>
+  <compset name="I1850CLM45BGC">
+    <grid name="f10_f10">
+      <test name="ERP_Ld5">
+        <machine compiler="intel" testtype="aux_clm45" testmods="rtm/rtmOff">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_clm45" testmods="rtm/rtmOnFloodOnEffvelOn">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_clm45" testmods="rtm/rtmOnIceOff">yellowstone</machine>
+      </test>
+      <test name="SMS_D_Ld5">
+        <machine compiler="nag" testtype="aux_clm45" testmods="rtm/rtmOff">goldbach</machine>
+        <machine compiler="nag" testtype="aux_clm45" testmods="rtm/rtmOnFloodOnEffvelOn">goldbach</machine>
+        <machine compiler="nag" testtype="aux_clm45" testmods="rtm/rtmOnIceOff">goldbach</machine>
+      </test>
+    </grid>
+    <grid name="f19_g16">
+      <test name="ERP_D_E_Ld5">
+        <machine compiler="intel" testtype="aux_clm_ys_intel" testmods="rtm/rtmOnIceOff">edison</machine>
+        <machine compiler="intel" testtype="aux_clm45" testmods="rtm/rtmOnIceOff">yellowstone</machine>
+      </test>
+      <test name="ERP_Ld5">
+        <machine compiler="intel" testtype="aux_clm_ys_pgi" testmods="rtm/rtmOnFloodOnEffvelOff">edison</machine>
+        <machine compiler="intel" testtype="aux_clm_ys_pgi" testmods="rtm/rtmOnIceOn">edison</machine>
+        <machine compiler="gnu" testtype="aux_clm45" testmods="rtm/rtmOnIceOn">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_clm45" testmods="clm/default">yellowstone</machine>
+        <machine compiler="pgi" testtype="aux_clm45" testmods="rtm/rtmOnFloodOnEffvelOff">yellowstone</machine>
+      </test>
+    </grid>
+    <grid name="f19_g16_r01">
+      <test name="ERP_Ld5">
+        <machine compiler="intel" testtype="aux_clm_ys_pgi" testmods="rtm/rtmOnFloodOnEffvelOff">edison</machine>
+        <machine compiler="gnu" testtype="aux_clm45" testmods="rtm/rtmOnFloodOnEffvelOff">yellowstone</machine>
+      </test>
+    </grid>
+  </compset>
+</testlist>
